[package]
name = "DecCoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
uuid = { version = "1.0.0", features = ["v4"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7"
sha2 = "0.10.2"
serde = { version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
libp2p = { version = "0.45.1", features = ["tcp-tokio", "mdns", "default"] }
tokio = { version = "1.19.2", features = ["full"]}
serde_json = "1.0.81"
once_cell = "1.12.0"